# aura

./: Cargo.toml  LANGUAGE_SPEC.md  README.md  build.sh  out.aura
docs/: bob.md
lib/trampoline/: trampoline.S
src/: lib.rs  main.rs
src/ast/: mod.rs
src/codegen/: binary.rs  mod.rs
src/lexer/: mod.rs
src/parser/: mod.rs
src/typecheck/: mod.rs
tests/: hello_final.aura  hello_syscall.aura  kernel_features.aura  simple.aura  test_alloc_free.aura
