[package]
name = "aura-compiler"
version = "0.1.0"
edition = "2021"
description = "Aura systems programming language compiler"
authors = ["Aura Developers"]

[dependencies]
anyhow = "1.0"
logos = "0.14"
hashbrown = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.24"

[[bin]]
name = "aura"
path = "src/main.rs"
